--- a/mutton.html
+++ b/mutton.html
@@ -92,9 +92,9 @@
           </div>
         </div>
       </div>-->
-      <div class="container-fluid">
+      <div class="container">
         <div class="row my-5">
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -108,7 +108,7 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -136,7 +136,7 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -150,7 +150,7 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -164,7 +164,7 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -178,12 +178,14 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Cut</h5>
-                <p class="card-text">Price: Rs.699</p>
+                <!--<h6 class="card-subtitle mb-2">Price: Rs.69</h6>-->
+                <p class="card-text">Price: Rs.69</p>
+                <p class="card-text">Quantity: 69</p>
                 <div class="d-grid gap-2">
                   <button class="btn btn-dark text-white" type="button">Add to cart</button>
                   <button class="btn btn-dark text-white" type="button">Remove from cart</button>
@@ -192,7 +194,7 @@
             </div>
           </div>
 
-          <div class="col-3 my-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
