--- a/mutton.html
+++ b/mutton.html
@@ -99,10 +99,11 @@
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Leg</h5>
-                <p class="card-text">Price: Rs.699</p>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text" id="quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
+                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
+                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
                 </div>
               </div>
             </div>
@@ -113,7 +114,8 @@
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Liver</h5>
-                <p class="card-text">Price: Rs.699</p>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text">Quantity: 69</p>
                 <div class="d-grid gap-2">
                   <button class="btn btn-dark text-white" type="button">Add to cart</button>
                   <button class="btn btn-dark text-white" type="button">Remove from cart</button>
@@ -127,64 +129,7 @@
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Cut</h5>
-                <p class="card-text">Price: Rs.699</p>
-                <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
-            <div class="card">
-              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Mutton Chops</h5>
-                <p class="card-text">Price: Rs.699</p>
-                <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
-            <div class="card">
-              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Mutton Leg</h5>
-                <p class="card-text">Price: Rs.699</p>
-                <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
-            <div class="card">
-              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Mutton Liver</h5>
-                <p class="card-text">Price: Rs.699</p>
-                <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
-            <div class="card">
-              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Mutton Cut</h5>
-                <!--<h6 class="card-subtitle mb-2">Price: Rs.69</h6>-->
-                <p class="card-text">Price: Rs.69</p>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
                 <p class="card-text">Quantity: 69</p>
                 <div class="d-grid gap-2">
                   <button class="btn btn-dark text-white" type="button">Add to cart</button>
@@ -199,7 +144,68 @@
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Chops</h5>
-                <p class="card-text">Price: Rs.699</p>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text">Quantity: 69</p>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
+            <div class="card">
+              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Mutton Leg</h5>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text">Quantity: 69</p>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
+            <div class="card">
+              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Mutton Liver</h5>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text">Quantity: 69</p>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
+            <div class="card">
+              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Mutton Cut</h5>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text">Quantity: 69</p>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-dark text-white" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white" type="button">Remove from cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
+            <div class="card">
+              <img src="./Images/sample.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Mutton Chops</h5>
+                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
+                <p class="card-text">Quantity: 69</p>
                 <div class="d-grid gap-2">
                   <button class="btn btn-dark text-white" type="button">Add to cart</button>
                   <button class="btn btn-dark text-white" type="button">Remove from cart</button>
@@ -229,5 +235,7 @@
   </footer>
 
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <script src="./Scripts/cart.js"></script>
 </body>
 </html>
