--- a/mutton.html
+++ b/mutton.html
@@ -45,9 +45,6 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Seafood</a>
                   </li>
-                  <!--<li class="nav-item">
-                    <a class="nav-link active" href="#">Link</a>
-                  </li>-->
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -62,136 +59,120 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Leg</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text" id="quantity">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Liver</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Cut</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Chops</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
-                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Leg</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
-                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Liver</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
-                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Cut</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
-                <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
-          <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
               <img src="./Images/sample.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mutton Chops</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
-                <p class="card-text">Quantity: 69</p>
+                <p class="card-text quantity">Quantity: 69</p>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark text-white" type="button" id="addToCart">Add to cart</button>
-                  <button class="btn btn-dark text-white" type="button" id="removeFromCart">Remove from cart</button>
+                  <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                  <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
                 </div>
               </div>
             </div>
@@ -219,8 +200,8 @@
 
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   
-  <script src="./Scripts/cart.js"></script>
-  
+  <!--<script src="./Scripts/cart.js"></script>-->
+  <div id="app"></div>
   <script src="./Scripts/cart.js"></script>
 </body>
 </html>
