--- a/beef.html
+++ b/beef.html
@@ -35,8 +35,8 @@
                       Redmeat
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item activedrop" href="./beef.html">Beef</a></li>
-                      <li><a class="dropdown-item activedrop activepage" href="./mutton.html">Mutton</a></li>
+                      <li><a class="dropdown-item activedrop activepage" href="./beef.html">Beef</a></li>
+                      <li><a class="dropdown-item activedrop" href="./mutton.html">Mutton</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -60,9 +60,9 @@
         <div class="row my-5">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton leg.jpeg" class="card-img-top img-size" alt="mutton leg">
+              <img src="./Images/beef leg.jpeg" class="card-img-top img-size" alt="beef leg">
               <div class="card-body">
-                <h5 class="card-title">Mutton Leg</h5>
+                <h5 class="card-title">Beef Leg</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
                 <p class="card-text quantity">Quantity: 70</p>
                 <div class="d-grid gap-2">
@@ -75,9 +75,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton liver.jpeg" class="card-img-top img-size" alt="mutton liver">
+              <img src="./Images/beef liver.jpeg" class="card-img-top img-size" alt="beef liver">
               <div class="card-body">
-                <h5 class="card-title">Mutton Liver</h5>
+                <h5 class="card-title">Beef Liver</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.750</h6>
                 <p class="card-text quantity">Quantity: 90</p>
                 <div class="d-grid gap-2">
@@ -90,9 +90,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton rib.jpeg" class="card-img-top img-size" alt="mutton rib">
+              <img src="./Images/beef rib.jpeg" class="card-img-top img-size" alt="beef rib">
               <div class="card-body">
-                <h5 class="card-title">Mutton Rib</h5>
+                <h5 class="card-title">Beef Rib</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.650</h6>
                 <p class="card-text quantity">Quantity: 60</p>
                 <div class="d-grid gap-2">
@@ -105,9 +105,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton chops.jpeg" class="card-img-top img-size" alt="mutton chops">
+              <img src="./Images/beef chops.jpeg" class="card-img-top img-size" alt="beef chops">
               <div class="card-body">
-                <h5 class="card-title">Mutton Chops</h5>
+                <h5 class="card-title">Beef Chops</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.500</h6>
                 <p class="card-text quantity">Quantity: 40</p>
                 <div class="d-grid gap-2">
@@ -120,9 +120,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton thigh.jpeg" class="card-img-top img-size" alt="mutton thigh">
+              <img src="./Images/beef chuck.jpeg" class="card-img-top img-size" alt="beef thigh">
               <div class="card-body">
-                <h5 class="card-title">Mutton Thigh</h5>
+                <h5 class="card-title">Beef Chuck</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.600</h6>
                 <p class="card-text quantity">Quantity: 20</p>
                 <div class="d-grid gap-2">
@@ -135,9 +135,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton loin.jpeg" class="card-img-top img-size" alt="mutton loin">
+              <img src="./Images/beef loin.jpeg" class="card-img-top img-size" alt="beef loin">
               <div class="card-body">
-                <h5 class="card-title">Mutton Loin</h5>
+                <h5 class="card-title">Beef Loin</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.300</h6>
                 <p class="card-text quantity">Quantity: 10</p>
                 <div class="d-grid gap-2">
@@ -150,9 +150,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton neck.jpeg" class="card-img-top img-size" alt="mutton neck">
+              <img src="./Images/beef brisket.jpeg" class="card-img-top img-size" alt="beef neck">
               <div class="card-body">
-                <h5 class="card-title">Mutton Neck</h5>
+                <h5 class="card-title">Beef Brisket</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.450</h6>
                 <p class="card-text quantity">Quantity: 65</p>
                 <div class="d-grid gap-2">
