--- a/readymade.html
+++ b/readymade.html
@@ -31,16 +31,16 @@
                     <a class="nav-link active" aria-current="page" href="#">Chicken</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active activepage" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Redmeat
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item activedrop" href="./beef.html">Beef</a></li>
-                      <li><a class="dropdown-item activedrop activepage" href="./mutton.html">Mutton</a></li>
+                      <li><a class="dropdown-item activedrop" href="./mutton.html">Mutton</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./readymade.html">Readymade</a>
+                    <a class="nav-link active activepage" aria-current="page" href="./readymade.html">Readymade</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Seafood</a>
@@ -60,9 +60,9 @@
         <div class="row my-5">
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton leg.jpeg" class="card-img-top img-size" alt="mutton leg">
+              <img src="./Images/chicken sausage.jpeg" class="card-img-top img-size" alt="chicken sausage">
               <div class="card-body">
-                <h5 class="card-title">Mutton Leg</h5>
+                <h5 class="card-title">Chicken Sausage</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.699</h6>
                 <p class="card-text quantity">Quantity: 70</p>
                 <div class="d-grid gap-2">
@@ -75,9 +75,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton liver.jpeg" class="card-img-top img-size" alt="mutton liver">
+              <img src="./Images/beef sausage.jpeg" class="card-img-top img-size" alt="beef sausage">
               <div class="card-body">
-                <h5 class="card-title">Mutton Liver</h5>
+                <h5 class="card-title">Beef Sausage</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.750</h6>
                 <p class="card-text quantity">Quantity: 90</p>
                 <div class="d-grid gap-2">
@@ -90,9 +90,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton rib.jpeg" class="card-img-top img-size" alt="mutton rib">
+              <img src="./Images/pork sausage.jpeg" class="card-img-top img-size" alt="pork sausage">
               <div class="card-body">
-                <h5 class="card-title">Mutton Rib</h5>
+                <h5 class="card-title">Pork Sausage</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.650</h6>
                 <p class="card-text quantity">Quantity: 60</p>
                 <div class="d-grid gap-2">
@@ -105,9 +105,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton chops.jpeg" class="card-img-top img-size" alt="mutton chops">
+              <img src="./Images/chicken meatballs.jpeg" class="card-img-top img-size" alt="chicken meatballs">
               <div class="card-body">
-                <h5 class="card-title">Mutton Chops</h5>
+                <h5 class="card-title">Chicken Meatballs</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.500</h6>
                 <p class="card-text quantity">Quantity: 40</p>
                 <div class="d-grid gap-2">
@@ -120,9 +120,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton thigh.jpeg" class="card-img-top img-size" alt="mutton thigh">
+              <img src="./Images/beef meatballs.jpeg" class="card-img-top img-size" alt="beef meatballs">
               <div class="card-body">
-                <h5 class="card-title">Mutton Thigh</h5>
+                <h5 class="card-title">Beef Meatballs</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.600</h6>
                 <p class="card-text quantity">Quantity: 20</p>
                 <div class="d-grid gap-2">
@@ -135,9 +135,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton loin.jpeg" class="card-img-top img-size" alt="mutton loin">
+              <img src="./Images/salmon tin fish.jpeg" class="card-img-top img-size" alt="salmon tin fish">
               <div class="card-body">
-                <h5 class="card-title">Mutton Loin</h5>
+                <h5 class="card-title">Salmon Tin Fish</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.300</h6>
                 <p class="card-text quantity">Quantity: 10</p>
                 <div class="d-grid gap-2">
@@ -150,9 +150,9 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
             <div class="card">
-              <img src="./Images/mutton neck.jpeg" class="card-img-top img-size" alt="mutton neck">
+              <img src="./Images/chicken patty.jpeg" class="card-img-top img-size" alt="chicken patty">
               <div class="card-body">
-                <h5 class="card-title">Mutton Neck</h5>
+                <h5 class="card-title">Chicken Patty</h5>
                 <h6 class="card-subtitle mb-2">Price: Rs.450</h6>
                 <p class="card-text quantity">Quantity: 65</p>
                 <div class="d-grid gap-2">
@@ -161,7 +161,22 @@
                 </div>
               </div>
             </div>
-          </div> 
+
+           <!-- <div class="col-lg-3 col-md-4 col-sm-6 d-xl-block d-lg-block d-md-block d-sm-none my-3">
+                <div class="card">
+                  <img src="./Images/packaged.jpeg" class="card-img-top img-size" alt="packaged chicken">
+                  <div class="card-body">
+                    <h5 class="card-title">Packaged Chickhen</h5>
+                    <h6 class="card-subtitle mb-2">Price: Rs.850</h6>
+                    <p class="card-text quantity">Quantity: 95</p>
+                    <div class="d-grid gap-2">
+                      <button class="btn btn-dark text-white addToCart" type="button">Add to cart</button>
+                      <button class="btn btn-dark text-white removeFromCart" type="button">Remove from cart</button>
+                    </div>
+                  </div>
+                </div>
+          </div> -->
+
         </div>
       </div>
     </main>
