--- a/login.html
+++ b/login.html
@@ -5,21 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeatMyself</title>
+
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <form id="login-form" class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
+<body class="bg-dark">
+   <main>
+    <div class="container">
+      <h1 class="text-center my-4 text-white">User login</h1>
+      <form>
+        <div class="mb-3">
+          <label for="Username" class="form-label text-white">User name</label>
+          <input type="text" class="form-control" id="name">
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+
+        <div class="mb-3">
+          <label for="PAssword" class="form-label text-white">Password</label>
+          <input type="password" class="form-control" id="password">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label text-white" for="exampleCheck1">I agree to all terms & conditions.</label>
+        </div>
+        <button type="submit" class="btn btn-primary my-3">Submit</button>
       </form>
+    </div>
+   </main>
 
       <script src="./Scripts/login.js"></script>
       <script>
